--- a/index.html
+++ b/index.html
@@ -10,114 +10,125 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>webstudio</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <header class="header">
+      <nav class="header-nav">
+        <a class="logo" href="./index.html"><span>WEB</span>STUDIO</a>
+        <ul class="header-menu">
+          <li class="header-menu-item">
+            <a class="header-menu-link" href="">Studio</a>
+          </li>
+          <li class="header-menu-item">
+            <a class="header-menu-link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="header-menu-item">
+            <a class="header-menu-link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
 
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="address">
+        <ul class="contacts list">
+          <li class="contacts-item">
+            <a href="mailto:info@devstudio.com" class="contacts-link link">info@devstudio.com</a>
+          </li>
+          <li class="contacts-item">
+            <a href="tel:+110001111111" class="pcontacts-link link">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
 
     <main class="main">
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-text">Effective Solutions for Your Business</h1>
+        <button class="hero-btn" type="button">Order Service</button>
       </section>
 
-      <section>
+      <section class="description">
         <h2>Our Advantages</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
+        <ul class="descriprion-list">
+          <li class="description-item">
+            <h3 class="description-title">Strategy</h3>
+            <p class="description-text">
+              Our goal is to identify the business problem to walk away with the perfect and
+              creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
+          <li class="description-item">
+            <h3 class="description-title">Punctuality</h3>
+            <p class="description-text">
+              Bring the key message to the brand's audience for the best price within the shortest
+              possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
+          <li class="description-item">
+            <h3 class="description-title">Diligence</h3>
+            <p class="description-text">
+              Research and confirm brands that present the strongest digital growth opportunities
+              and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
+          <li class="description-item">
+            <h3 class="description-title">Technologies</h3>
+            <p class="description-text">
+              Design practice focused on digital experiences. We bring forth a deep passion for
+              problem-solving.
             </p>
           </li>
         </ul>
       </section>
 
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
-            <img src="./images/img1.jpg" alt="image" width="360" />
+      <section class="scope">
+        <h2 class="csope-title">What are we doing</h2>
+        <ul class="scope-list">
+          <li class="scope-link">
+            <img class="scope-img" src="./images/img1.jpg" alt="image" width="360" />
           </li>
-          <li>
-            <img src="./images/img2.jpg" alt="image" width="360" />
+          <li class="scope-link">
+            <img class="scope-img" src="./images/img2.jpg" alt="image" width="360" />
           </li>
-          <li>
-            <img src="./images/img3.jpg" alt="image" width="360" />
+          <li class="scope-link">
+            <img class="scope-img" src="./images/img3.jpg" alt="image" width="360" />
           </li>
         </ul>
       </section>
 
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-item">
             <img src="./images/photo1.jpg" alt="Mark Guerrero" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-item-title">Mark Guerrero</h3>
+            <p class="team-item-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/photo2.jpg" alt="Tom Ford" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-item-title">Tom Ford</h3>
+            <p class="team-item-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/photo3.jpg" alt="Camila Garcia" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-item-title">Camila Garcia</h3>
+            <p class="team-item-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/photo4.jpg" alt="Daniel Wilson" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-item-title">Daniel Wilson</h3>
+            <p class="team-item-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
+    <footer class="footer">
+      <a class="logo" href="./index.html"><span>WEB</span>STUDIO</a>
+      <p class="footer-text">
+        Increase the flow of customers and sales for your business with digital marketing & growth
+        solutions.
       </p>
     </footer>
   </body>
