--- a/portfolio.html
+++ b/portfolio.html
@@ -14,103 +14,111 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <header style="header">
-      <nav>
-        <a href="./index.html"><span>WEB</span>STUDIO</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <!-- HEADER -->
+
+    <header class="header">
+      <a class="header-logo" href="./index.html"><span>WEB</span>STUDIO</a>
+      <nav class="navbar">
+        <ul class="navbar-list">
+          <li class="navbar-item">
+            <a href="">Studio</a>
+          </li>
+          <li class="navbar-item">
+            <a href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="navbar-item">
+            <a href="">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+
+      <address class="contact">
+        <ul class="header-contact">
+          <li class="header-contact-item">
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="header-contact-item">
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
 
-    <main>
-      <section>
-        <ul>
-          <li>
-            <button type="button">All</button>
+    <main class="main">
+      <!-- MENU section -->
+      <section class="menu section">
+        <h1>Choise</h1>
+        <ul class="menu-btn-list">
+          <li class="menu-item">
+            <button class="menu-btn" type="button">All</button>
           </li>
-          <li>
-            <button type="button">Web Site</button>
+          <li class="menu-item">
+            <button class="menu-btn" type="button">Web Site</button>
           </li>
-          <li>
-            <button type="button">App</button>
+          <li class="menu-item">
+            <button class="menu-btn" type="button">App</button>
           </li>
-          <li>
-            <button type="button">Design</button>
+          <li class="menu-item">
+            <button class="menu-btn" type="button">Design</button>
           </li>
-          <li>
-            <button type="button">Marketing</button>
+          <li class="menu-item">
+            <button class="menu-btn" type="button">Marketing</button>
           </li>
         </ul>
-      </section>
 
-      <section>
-        <ul>
-          <li>
-            <img src="./images/img-row11.jpg" width="360" alt="image" />
-            <h2>Banking App Interface Concept</h2>
-            <p>App</p>
+        <ul class="menu-list">
+          <li class="menu-inner-list">
+            <img class="menu-img" src="./images/img-row11.jpg" width="360" alt="image" />
+            <h2 class="menu-title">Banking App Interface Concept</h2>
+            <p class="menu-desc">App</p>
           </li>
-          <li>
-            <img src="./images/img-row12.jpg" width="360" alt="image" />
-            <h2>Cashless Payment</h2>
-            <p>Marketing</p>
+          <li class="menu-inner-list">
+            <img class="menu-img" src="./images/img-row12.jpg" width="360" alt="image" />
+            <h2 class="menu-title">Cashless Payment</h2>
+            <p class="menu-desc">Marketing</p>
           </li>
-          <li>
-            <img src="./images/img-row13.jpg" width="360" alt="image" />
-            <h2>Meditation App</h2>
-            <p>App</p>
+          <li class="menu-inner-list">
+            <img class="menu-img" src="./images/img-row13.jpg" width="360" alt="image" />
+            <h2 class="menu-title">Meditation App</h2>
+            <p class="menu-desc">App</p>
           </li>
-          <li>
-            <img src="./images/img-row21.jpg" width="360" alt="image" />
-            <h2>Taxi Service</h2>
-            <p>Marketing</p>
+          <li class="menu-inner-list">
+            <img class="menu-img" src="./images/img-row21.jpg" width="360" alt="image" />
+            <h2 class="menu-title">Taxi Service</h2>
+            <p class="menu-desc">Marketing</p>
           </li>
-          <li>
-            <img src="./images/img-row22.jpg" width="360" alt="image" />
-            <h2>Screen Illustrations</h2>
-            <p>Design</p>
+          <li class="menu-inner-list">
+            <img class="menu-img" src="./images/img-row22.jpg" width="360" alt="image" />
+            <h2 class="menu-title">Screen Illustrations</h2>
+            <p class="menu-desc">Design</p>
           </li>
-          <li>
-            <img src="./images/img-row23.jpg" width="360" alt="image" />
-            <h2>Online Courses</h2>
-            <p>Marketing</p>
+          <li class="menu-inner-list">
+            <img class="menu-img" src="./images/img-row23.jpg" width="360" alt="image" />
+            <h2 class="menu-title">Online Courses</h2>
+            <p class="menu-desc">Marketing</p>
           </li>
-          <li>
-            <img src="./images/img-row31.jpg" width="360" alt="image" />
-            <h2>Instagram Stories Concept</h2>
-            <p>Design</p>
+          <li class="menu-inner-list">
+            <img class="menu-img" src="./images/img-row31.jpg" width="360" alt="image" />
+            <h2 class="menu-title">Instagram Stories Concept</h2>
+            <p class="menu-desc">Design</p>
           </li>
-          <li>
-            <img src="./images/img-row32.jpg" width="360" alt="image" />
-            <h2>Organic Food</h2>
-            <p>Web Site</p>
+          <li class="menu-inner-list">
+            <img class="menu-img" src="./images/img-row32.jpg" width="360" alt="image" />
+            <h2 class="menu-title">Organic Food</h2>
+            <p class="menu-desc">Web Site</p>
           </li>
-          <li>
-            <img src="./images/img-row33.jpg" width="360" alt="image" />
-            <h2>Fresh Coffee</h2>
-            <p>Web Site</p>
+          <li class="menu-inner-list">
+            <img class="menu-img" src="./images/img-row33.jpg" width="360" alt="image" />
+            <h2 class="menu-title">Fresh Coffee</h2>
+            <p class="menu-desc">Web Site</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <section>
-      <ul>
-        <li> </li>
-      </ul>
-    </section>
-    <footer style="footer">
-      <a href="./index.html"><span>WEB</span>STUDIO </a>
-      <p>
+    <footer class="footer">
+      <a class="footer-logo" href="./index.html"><span>WEB</span>STUDIO</a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
       </p>
