--- a/index.html
+++ b/index.html
@@ -14,67 +14,72 @@
     <title>webstudio</title>
   </head>
   <body>
+    <!-- HEADER -->
+
     <header class="header">
-      <nav class="header-nav">
-        <a class="logo" href="./index.html"><span>WEB</span>STUDIO</a>
-        <ul class="header-menu">
-          <li class="header-menu-item">
-            <a class="header-menu-link" href="">Studio</a>
+      <a class="header-logo" href="./index.html"><span>WEB</span>STUDIO</a>
+      <nav class="navbar">
+        <ul class="navbar-list">
+          <li class="navbar-item">
+            <a href="">Studio</a>
           </li>
-          <li class="header-menu-item">
-            <a class="header-menu-link" href="./portfolio.html">Portfolio</a>
+          <li class="navbar-item">
+            <a href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="header-menu-item">
-            <a class="header-menu-link" href="">Contacts</a>
+          <li class="navbar-item">
+            <a href="">Contacts</a>
           </li>
         </ul>
       </nav>
 
-      <address class="address">
-        <ul class="contacts list">
-          <li class="contacts-item">
-            <a href="mailto:info@devstudio.com" class="contacts-link link">info@devstudio.com</a>
+      <address class="contact">
+        <ul class="header-contact">
+          <li class="header-contact-item">
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="contacts-item">
-            <a href="tel:+110001111111" class="pcontacts-link link">+11 (000) 111-11-11</a>
+          <li class="header-contact-item">
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
     </header>
 
     <main class="main">
-      <section class="hero">
-        <h1 class="hero-text">Effective Solutions for Your Business</h1>
+      <!-- HERO section -->
+
+      <section class="hero section">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button class="hero-btn" type="button">Order Service</button>
       </section>
 
-      <section class="description">
-        <h2>Our Advantages</h2>
-        <ul class="descriprion-list">
-          <li class="description-item">
-            <h3 class="description-title">Strategy</h3>
-            <p class="description-text">
+      <!-- DESCRIPTION section-->
+
+      <section class="about section">
+        <ul class="about-list">
+          <li class="about-item">
+            <h3 class="about-title">Strategy</h3>
+            <p class="about-subtitle">
               Our goal is to identify the business problem to walk away with the perfect and
               creative solution.
             </p>
           </li>
-          <li class="description-item">
-            <h3 class="description-title">Punctuality</h3>
-            <p class="description-text">
+          <li class="about-item">
+            <h3 class="about-title">Punctuality</h3>
+            <p class="about-subtitle">
               Bring the key message to the brand's audience for the best price within the shortest
               possible time.
             </p>
           </li>
-          <li class="description-item">
-            <h3 class="description-title">Diligence</h3>
-            <p class="description-text">
+          <li class="about-item">
+            <h3 class="about-title">Diligence</h3>
+            <p class="about-subtitle">
               Research and confirm brands that present the strongest digital growth opportunities
               and minimize risk.
             </p>
           </li>
-          <li class="description-item">
-            <h3 class="description-title">Technologies</h3>
-            <p class="description-text">
+          <li class="about-item">
+            <h3 class="about-title">Technologies</h3>
+            <p class="about-subtitle">
               Design practice focused on digital experiences. We bring forth a deep passion for
               problem-solving.
             </p>
@@ -82,50 +87,56 @@
         </ul>
       </section>
 
-      <section class="scope">
-        <h2 class="csope-title">What are we doing</h2>
-        <ul class="scope-list">
-          <li class="scope-link">
+      <!-- SCOPE section -->
+
+      <section class="scope section">
+        <h2 class="scope-title">What are we doing</h2>
+        <ul class="scope-list list">
+          <li class="scope-item">
             <img class="scope-img" src="./images/img1.jpg" alt="image" width="360" />
           </li>
-          <li class="scope-link">
+          <li class="scope-item">
             <img class="scope-img" src="./images/img2.jpg" alt="image" width="360" />
           </li>
-          <li class="scope-link">
+          <li class="scope-item">
             <img class="scope-img" src="./images/img3.jpg" alt="image" width="360" />
           </li>
         </ul>
       </section>
 
-      <section class="team">
+      <!-- TEAM section -->
+
+      <section class="team section">
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list">
           <li class="team-item">
-            <img src="./images/photo1.jpg" alt="Mark Guerrero" width="264" />
-            <h3 class="team-item-title">Mark Guerrero</h3>
-            <p class="team-item-text">Product Designer</p>
+            <img class="team-img" src="./images/photo1.jpg" alt="Mark Guerrero" width="264" />
+            <h3 class="team-subtitle">Mark Guerrero</h3>
+            <p class="team-text">Product Designer</p>
           </li>
           <li class="team-item">
-            <img src="./images/photo2.jpg" alt="Tom Ford" width="264" />
-            <h3 class="team-item-title">Tom Ford</h3>
-            <p class="team-item-text">Frontend Developer</p>
+            <img class="team-img" src="./images/photo2.jpg" alt="Tom Ford" width="264" />
+            <h3 class="team-subtitle">Tom Ford</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
           <li class="team-item">
-            <img src="./images/photo3.jpg" alt="Camila Garcia" width="264" />
-            <h3 class="team-item-title">Camila Garcia</h3>
-            <p class="team-item-text">Marketing</p>
+            <img class="team-img" src="./images/photo3.jpg" alt="Camila Garcia" width="264" />
+            <h3 class="team-subtitle">Camila Garcia</h3>
+            <p class="team-text">Marketing</p>
           </li>
           <li class="team-item">
-            <img src="./images/photo4.jpg" alt="Daniel Wilson" width="264" />
-            <h3 class="team-item-title">Daniel Wilson</h3>
-            <p class="team-item-text">UI Designer</p>
+            <img class="team-img" src="./images/photo4.jpg" alt="Daniel Wilson" width="264" />
+            <h3 class="team-subtitle">Daniel Wilson</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
+    <!-- FOOTER section -->
+
     <footer class="footer">
-      <a class="logo" href="./index.html"><span>WEB</span>STUDIO</a>
+      <a class="footer-logo" href="./index.html"><span>WEB</span>STUDIO</a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
