--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- HEADER -->
 
     <header class="header">
-      <a class="header-logo" href="./index.html"><span>WEB</span>STUDIO</a>
+      <a class="header-logo" href="./index.html">WEB<span>STUDIO</span></a>
       <nav class="navbar">
         <ul class="navbar-list">
           <li class="navbar-item">
@@ -136,7 +136,7 @@
     <!-- FOOTER section -->
 
     <footer class="footer">
-      <a class="footer-logo" href="./index.html"><span>WEB</span>STUDIO</a>
+      <a class="footer-logo" href="./index.html">WEB<span>STUDIO</span></a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
