--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <!-- HEADER -->
 
     <header class="header">
-      <a class="header-logo" href="./index.html">WEB<span>STUDIO</span></a>
       <nav class="navbar">
+        <a class="navbar-logo" href="./index.html">WEB<span>STUDIO</span></a>
         <ul class="navbar-list">
           <li class="navbar-item">
             <a href="">Studio</a>
