--- a/index.html
+++ b/index.html
@@ -18,27 +18,31 @@
 
     <header class="header">
       <nav class="navbar">
-        <a class="navbar-logo" href="./index.html">WEB<span>STUDIO</span></a>
-        <ul class="navbar-list">
+        <a class="navbar-logo link" href="./index.html"
+          >WEB<span class="navbar-span">STUDIO</span></a
+        >
+        <ul class="navbar-list list">
           <li class="navbar-item">
-            <a href="">Studio</a>
+            <a class="navbar-link link" href="./index.html">Studio</a>
           </li>
           <li class="navbar-item">
-            <a href="./portfolio.html">Portfolio</a>
+            <a class="navbar-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="navbar-item">
-            <a href="">Contacts</a>
+            <a class="navbar-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
 
       <address class="contact">
-        <ul class="header-contact">
-          <li class="header-contact-item">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <ul class="contact-list list">
+          <li class="contact-item">
+            <a class="contact-item-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li class="header-contact-item">
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="contact-item">
+            <a class="contact-item-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
