--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="header">
       <nav class="navbar">
         <a class="navbar-logo link" href="./index.html"
-          >WEB<span class="navbar-span">STUDIO</span></a
+          >Web<span class="navbar-span">Studio</span></a
         >
         <ul class="navbar-list list">
           <li class="navbar-item">
