--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
       </address>
     </header>
 
+    <!-- MAIN -->
     <main class="main">
       <!-- HERO section -->
-
-      <section class="hero section">
+      <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button class="hero-btn" type="button">Order Service</button>
       </section>
