--- a/portfolio.html
+++ b/portfolio.html
@@ -17,32 +17,22 @@
     <!-- HEADER -->
 
     <header class="header">
-      <a class="header-logo" href="./index.html"><span>WEB</span>STUDIO</a>
       <nav class="navbar">
-        <ul class="navbar-list">
+        <a class="navbar-logo link" href="./index.html"
+          >Web<span class="navbar-span">Studio</span></a
+        >
+        <ul class="navbar-list list">
           <li class="navbar-item">
-            <a href="">Studio</a>
+            <a class="navbar-link link" href="./index.html">Studio</a>
           </li>
           <li class="navbar-item">
-            <a href="./portfolio.html">Portfolio</a>
+            <a class="navbar-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="navbar-item">
-            <a href="">Contacts</a>
+            <a class="navbar-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
-
-      <address class="contact">
-        <ul class="header-contact">
-          <li class="header-contact-item">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li class="header-contact-item">
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
-    </header>
 
     <main class="main">
       <!-- MENU section -->
