--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <!-- DESCRIPTION section-->
 
-      <section class="about section">
+      <section class="about">
         <ul class="about-list">
           <li class="about-item">
             <h3 class="about-title">Strategy</h3>
@@ -93,7 +93,7 @@
 
       <!-- SCOPE section -->
 
-      <section class="scope section">
+      <section class="scope">
         <h2 class="scope-title">What are we doing</h2>
         <ul class="scope-list list">
           <li class="scope-item">
@@ -110,7 +110,7 @@
 
       <!-- TEAM section -->
 
-      <section class="team section">
+      <section class="team">
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list">
           <li class="team-item">
