--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
       </section>
 
       <!-- DESCRIPTION section-->
-
+      <h1 hidden class="about-hidden">About</h1>
       <section class="about">
-        <ul class="about-list">
+        <ul class="about-list list">
           <li class="about-item">
             <h3 class="about-title">Strategy</h3>
             <p class="about-subtitle">
@@ -109,10 +109,9 @@
       </section>
 
       <!-- TEAM section -->
-
       <section class="team">
         <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
+        <ul class="team-list list">
           <li class="team-item">
             <img class="team-img" src="./images/photo1.jpg" alt="Mark Guerrero" width="264" />
             <h3 class="team-subtitle">Mark Guerrero</h3>
