--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="header">
       <nav class="navbar">
         <a class="navbar-logo link" href="./index.html"
-          >Web<span class="navbar-span">Studio</span></a
+          >Web<span class="header-span">Studio</span></a
         >
         <ul class="navbar-list list">
           <li class="navbar-item">
@@ -92,9 +92,8 @@
       </section>
 
       <!-- SCOPE section -->
-
       <section class="scope">
-        <h2 class="scope-title">What are we doing</h2>
+        <h2 class="section-title">What are we doing</h2>
         <ul class="scope-list list">
           <li class="scope-item">
             <img class="scope-img" src="./images/img1.jpg" alt="image" width="360" />
@@ -110,7 +109,7 @@
 
       <!-- TEAM section -->
       <section class="team">
-        <h2 class="team-title">Our Team</h2>
+        <h2 class="section-title">Our Team</h2>
         <ul class="team-list list">
           <li class="team-item">
             <img class="team-img" src="./images/photo1.jpg" alt="Mark Guerrero" width="264" />
@@ -139,7 +138,7 @@
     <!-- FOOTER section -->
 
     <footer class="footer">
-      <a class="footer-logo" href="./index.html">WEB<span>STUDIO</span></a>
+      <a class="footer-logo link" href="./index.html">Web<span class="footer-span">Studio</span></a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
