--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     <header class="header">
       <nav class="navbar">
         <a class="navbar-logo link" href="./index.html"
-          >Web<span class="navbar-span">Studio</span></a
+          >Web<span class="header-span">Studio</span></a
         >
         <ul class="navbar-list list">
           <li class="navbar-item">
@@ -33,6 +33,20 @@
           </li>
         </ul>
       </nav>
+
+      <address class="contact">
+        <ul class="contact-list list">
+          <li class="contact-item">
+            <a class="contact-item-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="contact-item">
+            <a class="contact-item-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
+    </header>
 
     <main class="main">
       <!-- MENU section -->
@@ -107,7 +121,7 @@
     </main>
 
     <footer class="footer">
-      <a class="footer-logo" href="./index.html"><span>WEB</span>STUDIO</a>
+      <a class="footer-logo link" href="./index.html">Web<span class="footer-span">Studio</span></a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
