--- a/portfolio.html
+++ b/portfolio.html
@@ -51,8 +51,8 @@
     <main class="main">
       <!-- MENU section -->
       <section class="menu section">
-        <h1>Choise</h1>
-        <ul class="menu-btn-list">
+        <h1 hidden>Choise</h1>
+        <ul class="menu-btn-list list">
           <li class="menu-item">
             <button class="menu-btn" type="button">All</button>
           </li>
