--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
   </head>
   <body>
     <!-- HEADER -->
-
     <header class="header">
       <nav class="navbar">
-        <a class="navbar-logo link" href="./index.html"
-          >Web<span class="header-span">Studio</span></a
-        >
+        <a class="navbar-logo link" href="./index.html">
+          Web<span class="header-span">Studio</span>
+        </a>
         <ul class="navbar-list list">
           <li class="navbar-item">
             <a class="navbar-link link" href="./index.html">Studio</a>
