--- a/portfolio.html
+++ b/portfolio.html
@@ -79,58 +79,58 @@
             </a>
           </li>
           <li class="menu-inner-list">
-            <a href="" class="menu-inner-link link"
-              ><img class="menu-img" src="./images/img-row12.jpg" width="360" alt="image" />
+            <a href="" class="menu-inner-link link">
+              <img class="menu-img" src="./images/img-row12.jpg" width="360" alt="image" />
               <h2 class="menu-title">Cashless Payment</h2>
               <p class="menu-desc">Marketing</p></a
             >
           </li>
 
           <li class="menu-inner-list">
-            <a href="" class="menu-inner-link link"
-              ><img class="menu-img" src="./images/img-row13.jpg" width="360" alt="image" />
+            <a href="" class="menu-inner-link link">
+              <img class="menu-img" src="./images/img-row13.jpg" width="360" alt="image" />
               <h2 class="menu-title">Meditation App</h2>
               <p class="menu-desc">App</p></a
             >
           </li>
           <li class="menu-inner-list">
-            <a href="" class="menu-inner-link link"
-              ><img class="menu-img" src="./images/img-row21.jpg" width="360" alt="image" />
+            <a href="" class="menu-inner-link link">
+              <img class="menu-img" src="./images/img-row21.jpg" width="360" alt="image" />
               <h2 class="menu-title">Taxi Service</h2>
               <p class="menu-desc">Marketing</p></a
             >
           </li>
           <li class="menu-inner-lisk">
-            <a href="" class="menu-inner-link link"
-              ><img class="menu-img" src="./images/img-row22.jpg" width="360" alt="image" />
+            <a href="" class="menu-inner-link link">
+              <img class="menu-img" src="./images/img-row22.jpg" width="360" alt="image" />
               <h2 class="menu-title">Screen Illustrations</h2>
               <p class="menu-desc">Design</p></a
             >
           </li>
           <li class="menu-inner-list">
-            <a href="" class="menu-inner-link link"
-              ><img class="menu-img" src="./images/img-row23.jpg" width="360" alt="image" />
+            <a href="" class="menu-inner-link link">
+              <img class="menu-img" src="./images/img-row23.jpg" width="360" alt="image" />
               <h2 class="menu-title">Online Courses</h2>
               <p class="menu-desc">Marketing</p></a
             >
           </li>
           <li class="menu-inner-list">
-            <a href="" class="menu-inner-link link"
-              ><img class="menu-img" src="./images/img-row31.jpg" width="360" alt="image" />
+            <a href="" class="menu-inner-link link">
+              <img class="menu-img" src="./images/img-row31.jpg" width="360" alt="image" />
               <h2 class="menu-title">Instagram Stories Concept</h2>
               <p class="menu-desc">Design</p></a
             >
           </li>
           <li class="menu-inner-list">
-            <a href="" class="menu-inner-link link"
-              ><img class="menu-img" src="./images/img-row32.jpg" width="360" alt="image" />
+            <a href="" class="menu-inner-link link">
+              <img class="menu-img" src="./images/img-row32.jpg" width="360" alt="image" />
               <h2 class="menu-title">Organic Food</h2>
               <p class="menu-desc">Web Site</p></a
             >
           </li>
           <li class="menu-inner-list">
-            <a href="" class="menu-inner-link link"
-              ><img class="menu-img" src="./images/img-row33.jpg" width="360" alt="image" />
+            <a href="" class="menu-inner-link link">
+              <img class="menu-img" src="./images/img-row33.jpg" width="360" alt="image" />
               <h2 class="menu-title">Fresh Coffee</h2>
               <p class="menu-desc">Web Site</p></a
             >
